# HomeNas

./: README.md
Client/nas/: build.gradle  settings.gradle
Client/nas/app/: build.gradle
Client/nas/app/src/androidTest/java/com/android/nas/: ExampleInstrumentedTest.java
Client/nas/app/src/main/: AndroidManifest.xml
Client/nas/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  network_utils-lib.cpp
Client/nas/app/src/main/java/com/android/nas/: MainActivity.java
Client/nas/app/src/main/java/com/android/nas/guestManager/: GuestManager.java  GuestManagerBinder.java  GuestManagerService.java  GuestManagerStateMachine.java
Client/nas/app/src/main/java/com/android/nas/network/: NetWorkUtils.java  PacketReader.java
Client/nas/app/src/main/java/com/android/nas/transfer/: TaskBinder.java  TaskService.java  TranseferService.java  TransferServiceBinder.java  TransferStateMachine.java
Client/nas/app/src/main/java/com/android/nas/util/: IState.java  LogUtils.java  State.java  StateMachine.java  caonima.java
Client/nas/app/src/main/res/layout/: activity_login.xml  activity_main.xml  fragment_cloud.xml  fragment_main.xml  fragment_profile.xml
Client/nas/app/src/main/res/menu/: bottom_nav_menu.xml
Client/nas/app/src/main/res/values/: strings.xml  themes.xml
Client/nas/app/src/main/res/values-night/: themes.xml
Client/nas/app/src/test/java/com/android/nas/: ExampleUnitTest.java
Client/nas/gradle/wrapper/: gradle-wrapper.properties
Client/proto/: GmPacketReader.proto  GmPacketReaderOuterClass.java
(+5 files in other folders)
